Fix the spacing when the maps are displayed inside a callout box

--- a/maps.css
+++ b/maps.css
@@ -25,6 +25,10 @@
 	margin-top: 25px;
 }
 
+.wusm-map-title {
+	margin-top: 20px;
+}
+
 @media screen and (max-width: 700px) {
 	.wusm-maps-static-map {
 		float: left;
